<<<<<<< HEAD
[gd_scene load_steps=21 format=2]
=======
[gd_scene load_steps=11 format=2]
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00

[ext_resource path="res://Scenes/Main menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Scene Manager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menu Button white.tscn" type="PackedScene" id=5]
<<<<<<< HEAD
[ext_resource path="res://Audio/Main theme.wav" type="AudioStream" id=6]
[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://Audio/Forest Ambience - Nature Sound Effect (Free Download).wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/Main theme disorted.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/Giggle4 disorted.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Giggle2.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Screech3.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/Giggle4.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/Giggle1.wav" type="AudioStream" id=14]
[ext_resource path="res://Audio/Whale Cry Sound Effects No Copyright.wav" type="AudioStream" id=15]
[ext_resource path="res://Audio/Screech1.wav" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=4]
=======
[ext_resource path="res://Fonts/CHILLER.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/BRADHITC.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Parent" type="Node2D"]

[node name="AudioPlayer" type="Node2D" parent="."]
pause_mode = 2

[node name="Theme" type="AudioStreamPlayer" parent="AudioPlayer"]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -10.0

[node name="Forest" type="AudioStreamPlayer" parent="AudioPlayer"]
pause_mode = 2
stream = ExtResource( 8 )

[node name="Themedisorted" type="AudioStreamPlayer" parent="AudioPlayer"]
pause_mode = 2
stream = ExtResource( 9 )

[node name="Giggle1" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 14 )
volume_db = -20.0

[node name="Giggle2" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="Giggle4" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 13 )

[node name="Giggledisorted" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 10 )

[node name="Screech1" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 16 )

[node name="Screech3" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 12 )

[node name="Animal call" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 15 )

[node name="SceneManager" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="Pause" type="Node2D" parent="SceneManager"]
pause_mode = 2
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="SceneManager/Pause"]

[node name="ColorRect" type="ColorRect" parent="SceneManager/Pause/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
<<<<<<< HEAD
color = Color( 0, 0, 0, 0.705882 )
=======
color = Color( 0, 0, 0, 0.141176 )
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="SceneManager/Pause/CanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 4.0
rect_min_size = Vector2( 1368, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu"]
margin_right = 1368.0
margin_bottom = 384.0
rect_min_size = Vector2( 1368, 384 )

[node name="Label" type="Label" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu/CenterContainer"]
<<<<<<< HEAD
margin_left = 480.0
margin_top = 146.0
margin_right = 887.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 1 )
=======
margin_left = 549.0
margin_top = 150.0
margin_right = 819.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 2 )
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
text = "Game Paused"

[node name="Button Container" type="VBoxContainer" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu"]
margin_top = 388.0
margin_right = 1368.0
margin_bottom = 772.0
rect_min_size = Vector2( 1368, 384 )

[node name="Continue" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container" instance=ExtResource( 5 )]
margin_top = 0.0
margin_bottom = 48.0
focus_neighbour_bottom = NodePath("../Controls")
text = "Continue"

[node name="Controls" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container" instance=ExtResource( 5 )]
margin_top = 52.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../Continue")
focus_neighbour_bottom = NodePath("../Main Menu")
text = "Controls"
margin_from_center = 90

[node name="Main Menu" parent="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container" instance=ExtResource( 5 )]
margin_top = 104.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../Controls")
text = "Main menu"
margin_from_center = 120

[node name="Control overlay" type="ColorRect" parent="SceneManager/Pause/CanvasLayer/ColorRect"]
visible = false
margin_right = 1368.0
margin_bottom = 768.0
rect_min_size = Vector2( 1368, 768 )
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SceneManager/Pause/CanvasLayer/ColorRect/Control overlay"]
margin_left = 64.0
margin_top = 64.0
margin_right = 742.0
margin_bottom = 413.0
<<<<<<< HEAD
custom_fonts/font = SubResource( 2 )
=======
custom_fonts/font = SubResource( 3 )
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
text = "Up arrow = jump
Left arrow = move left
Right arrow = move right
Down arrow = interact
I (Huruf I bukan l) = inventory
Esc = pause

di menu pake arrow key dan enter untuk navigasi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" parent="SceneManager/Pause/CanvasLayer/ColorRect/Control overlay" instance=ExtResource( 5 )]
margin_top = 544.0
margin_bottom = 592.0
text = "Close"
margin_from_center = 70

<<<<<<< HEAD
[node name="Confirm overlay" type="ColorRect" parent="SceneManager/Pause/CanvasLayer/ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="SceneManager/Pause/CanvasLayer/ColorRect/Confirm overlay"]
margin_left = 262.0
margin_top = 328.0
margin_right = 1011.0
margin_bottom = 389.0
custom_fonts/font = SubResource( 3 )
text = "Are you sure? All progress will be lost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" parent="SceneManager/Pause/CanvasLayer/ColorRect/Confirm overlay" instance=ExtResource( 5 )]
margin_top = 464.0
margin_bottom = 512.0
focus_neighbour_bottom = NodePath("../No")
text = "Yes"
margin_from_center = 70

[node name="No" parent="SceneManager/Pause/CanvasLayer/ColorRect/Confirm overlay" instance=ExtResource( 5 )]
margin_top = 510.716
margin_bottom = 558.716
focus_neighbour_top = NodePath("../Yes")
text = "No"
margin_from_center = 60

=======
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
[node name="Inventory" parent="SceneManager" instance=ExtResource( 3 )]

[node name="Main menu" parent="SceneManager" instance=ExtResource( 1 )]
pause_mode = 1

[node name="Transition" type="CanvasLayer" parent="SceneManager"]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="SceneManager/Transition"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SceneManager/Transition"]
<<<<<<< HEAD
anims/Fade = SubResource( 4 )
=======
anims/Fade = SubResource( 6 )
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00

[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container/Continue" to="SceneManager/Pause" method="_on_Continue_button_up"]
[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container/Controls" to="SceneManager/Pause" method="_on_Controls_button_up"]
[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Menu/Button Container/Main Menu" to="SceneManager/Pause" method="_on_Main_Menu_button_up"]
[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Control overlay/Close" to="SceneManager/Pause" method="_on_Close_button_up"]
<<<<<<< HEAD
[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Confirm overlay/Yes" to="SceneManager/Pause" method="_on_Yes_button_up"]
[connection signal="button_up" from="SceneManager/Pause/CanvasLayer/ColorRect/Confirm overlay/No" to="SceneManager/Pause" method="_on_No_button_up"]
=======
>>>>>>> 12aa47a5b834fe17869339c52eafc094b4d7ab00
